分隊系統/團隊,全體聊天系統已經完成!

--- a/Game/plugin.yml
+++ b/Game/plugin.yml
@@ -2,3 +2,7 @@ name: ModernWarfareIngamePlugin
 version: 0.1 Private
 author: FANA Studio
 main: org.waterhappy.game.mwingame.Main
+commands:
+  setmaxplayers:
+    description: setmaxplayers
+    usage: Doesnt work
